--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -1,68 +1,301 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Font  -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@500&display=swap" rel="stylesheet">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<!-- 
+    	Brownie Template
+    	http://www.templatemo.com/preview/templatemo_440_brownie
 
-  <title>Authentications</title>
+    	Credits:
+    	http://sorgalla.com/jcarousel/
+    	http://unsplash.com
+    	http://absurdwordpreferred.deviantart.com/art/FREE-Cogs-Transparent-PNG-145452644
+    -->
+	<title>Subscriptz</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/templatemo_style.css" rel="stylesheet" type="text/css">
 </head>
-<style>
-  body {
-    font-family: 'Recursive', sans-serif;
-    font-size: larger;
-  }
-</style>
-
 <body>
-
-  <!-- navbar  -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Authentications</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <% if(logged){ %>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
-            </li>
-            <% }else{ %>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/signup">Signup</a>
-              </li>
-              <% } %>
+	<nav id="responsive-menu">
+        <ul class="menu-holder">
+            <li class="active"><a href="#home"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="#about"><i class="fa fa-briefcase"></i>About</a></li>
+            <li><a href="#services"><i class="fa fa-cogs"></i>Services</a></li>
+            <li><a href="#products"><i class="fa fa-list"></i>Products</a></li>
+            <li><a href="#contact"><i class="fa fa-envelope"></i>Contact</a></li>
         </ul>
-      </div>
+    </nav>
+    <div class="templatemo-site-header">
+		<div class="container">
+			<div class="row templatemo-position-relative">				
+				<nav class="hidden-xs text-uppercase templatemo-nav">
+					<ul class="menu-holder">
+						<li class="active"><a href="#home">Home</a></li>
+						<li><a href="#about">About</a></li>					
+						<li><a href="#contact">Contact</a></li>
+						<% if(logged){ %>
+							<li><a href="/logout">Logout 😨</a></li>
+						<% }else{ %>
+							<li><a href="/login">Log in 🤭</a></li>
+							<li><a href="/signup">Sign Up 😻</a></li>
+						<% } %> 
+					</ul>
+				</nav>
+				<h1 class="templatemo-site-name">
+                	<span class="templatemo-brown" style="align-items: center">Subscriptz 🎇</span> 
+                	<span class="templatemo-gold"></span>
+                </h1>
+				<div class="text-right visible-xs">
+		            <a href="#" id="mobile_menu"><span class="fa fa-bars"></span></a>
+		        </div>
+			</div>
+		</div>    	
     </div>
-  </nav>
-  <!-- navbar end  -->
-
-  <div class="container py-3">
-    <h2>Node Js Authentication and Authorization</h2>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-
+	<section id="home" class="templatemo-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 templatemo-position-relative">
+					<div class="templatemo-flex-center templatemo-black-bg text-center">
+						<div class="templatemo-home-image-container">
+							<iframe src="https://giphy.com/embed/3tGUuD8MulTchzceb8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+							
+							<div class="templatemo-image-overlay">							
+								
+								<p class="text-uppercase templatemo-gold">Subscriptz</p>
+																				
+							</div>
+						</div>
+					</div>										
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-content-box templatemo-second-box">
+						<h2 class="templatemo-brown">Sub Swap Subscription</h2>
+						<h3 class="templatemo-gold">What do you do with extra coupons that you would not need? What if you could swap them with something that you would use?
+							Sounds cool? You are at the right place 😏</h3>
+						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a>
+						<a href="/signup" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(12, 95, 143);">Sign Up 😨</a>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="about" class="templatemo-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-content-box text-right">
+						<h2 class="templatemo-brown">
+							<span class="templatemo-section-title">Meet Our</span>
+							<span class="templatemo-section-title">Creative <span class="templatemo-gold"><strong>Team</strong></span></span>
+						</h2>
+						<p class="margin-top-30">Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
+	Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Proin condimentum fermentum nunc. Suspendisse in orci enim.</p>
+					</div>										
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-flex-center templatemo-black-bg">
+						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
+							<div class="jcarousel-wrapper templatemo-team">
+								<div class="jcarousel">
+								    <ul>
+								        <li>
+								        	<div class="text-center templatemo-team-member-container">
+								        		<div class="templatemo-member-img-container">
+								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
+								        			<img src="assets/images/team-member-1.jpg" alt="Team Member 1" class="tm-team-member-img">
+								        		</div>								        		
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Aenean sollicitudin</h3>
+												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
+												<p class="margin-top-15">Ribendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+												<p class="templatemo-brown text-uppercase">Duised odio</p>
+											</div>
+								        </li>
+								        <li>
+								        	<div class="text-center templatemo-team-member-container">
+								        		<div class="templatemo-member-img-container">
+								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
+													<img src="assets/images/team-member-2.jpg" alt="Team Member 2" class="img-circle tm-team-member-img">
+												</div>
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Ribendum auctor</h3>
+												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15">
+												<p class="margin-top-15">Aenean sollicitudin, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+												<p class="templatemo-brown text-uppercase">Nisi elit</p>
+											</div>							        	
+								        </li>
+								        <li>
+								        	<div class="text-center templatemo-team-member-container">
+								        		<div class="templatemo-member-img-container">
+								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
+													<img src="assets/images/team-member-3.jpg" alt="Team Member 3" class="img-circle tm-team-member-img">
+												</div>
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">sagittis sem</h3>
+												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15">
+												<p class="margin-top-15">Ribendum auctornisi elit consequat ipsum, nisi elit sem nibh id elit.</p>
+												<p class="templatemo-brown text-uppercase">Nec sagittis</p>
+											</div>							        	
+								        </li>
+								    </ul>
+								</div>
+								<a href="#" class="jcarousel-control-prev inactive">&lsaquo;</a>
+				                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+							</div>
+						</div>						
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="services" class="templatemo-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-flex-center templatemo-black-bg text-center">
+						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
+							<div class="templatemo-flex-item-ie-fix padding-30">
+								<h2 class="templatemo-gold">Our Plans</h2>
+								<div class="templatemo-service-container margin-top-15">
+									<img src="assets/images/plan-1.png" alt="Plan 1" class="templatemo-service-image">
+									<div class="templatemo-service-content text-left">
+										<h3 class="templatemo-service-title templatemo-brown">duis sed odio sit amet</h3>
+										<p class="templatemo-service-description">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+									</div>						
+								</div>
+								<div class="templatemo-service-container">
+									<img src="assets/images/plan-2.png" alt="Plan 2" class="templatemo-service-image">
+									<div class="templatemo-service-content text-left">
+										<h3 class="templatemo-service-title templatemo-brown">sagittis sem nibhd</h3>
+										<p class="templatemo-service-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat.</p>	
+									</div>						
+								</div>
+								<div class="templatemo-service-container">
+									<img src="assets/images/plan-3.png" alt="Plan 3" class="templatemo-service-image">
+									<div class="templatemo-service-content text-left">
+										<h3 class="templatemo-service-title templatemo-brown">duis sed odio sit amet</h3>
+										<p class="templatemo-service-description">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>	
+									</div>						
+								</div>	
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-content-box templatemo-second-box">
+						<h2 class="templatemo-brown">
+							<span class="templatemo-section-title">Powerful</span>
+							<span class="templatemo-section-title">Creative <span class="templatemo-gold"><strong>Design</strong></span></span>
+						</h2>
+						<p class="margin-top-30">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudinl
+	dorem quis bibendum auctor, nisi elit consequat ipsum, nec sagit. tis</p>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="products" class="templatemo-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-content-box text-right">
+						<h2 class="templatemo-brown">
+							<span class="templatemo-section-title">The Best</span>
+							<span class="templatemo-section-title">Quality <span class="templatemo-gold"><strong>Products</strong></span></span>
+						</h2>
+						<p class="margin-top-30">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+					</div>					
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-flex-center templatemo-black-bg">
+						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
+							<div class="jcarousel-wrapper templatemo-products">
+								<div class="jcarousel">
+								    <ul>
+								        <li>
+								        	<div class="templatemo-product-container text-center">
+												<h3 class="templatemo-gold">Product Name</h3>
+												<img src="assets/images/product-1.png" alt="Product 1" class="templatemo-product-img">	
+											</div>	
+								        </li>
+								        <li>
+								        	<div class="templatemo-product-container text-center">
+												<h3 class="templatemo-gold">Smart Phone</h3>
+												<img src="assets/images/product-2.png" alt="Product 2" class="templatemo-product-img">	
+											</div>								        	
+								        </li>
+								        <li>
+								        	<div class="templatemo-product-container text-center">
+												<h3 class="templatemo-gold">Cogs</h3>
+												<img src="assets/images/product-3.png" alt="Product 3" class="templatemo-product-img">	
+											</div>								        	
+								        </li>
+								    </ul>
+								</div>
+								<a href="#" class="jcarousel-control-prev inactive">&lsaquo;</a>
+				                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+							</div>													
+						</div>						
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="contact" class="templatemo-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-flex-center templatemo-black-bg">
+						<form action="/contact" method="post">
+							<div class="tm-contact-form">
+				                <div class="form-group">
+				                    <input type="text" id="contact_name" name="name" class="form-control" placeholder="Name..." />
+				                </div>
+				                <div class="form-group">
+				                    <input type="email" id="contact_email" name="email" class="form-control" placeholder="Email..." />
+				                </div>
+				                <div class="form-group">
+				                    <input type="text" id="contact_subject" name="sub" class="form-control" placeholder="Subject..." />
+				                </div>
+				                <div class="form-group">
+				                    <textarea id="contact_message" name="msg" class="form-control" rows="8" placeholder="Message..."></textarea>
+				                </div>
+			                </div>
+			                <button type="submit" class="btn text-uppercase templatemo-btn templatemo-send-btn">Send</button>
+			            </form>	
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<div class="templatemo-content-box templatemo-second-box">
+						<h2 class="templatemo-brown">Get In <span class="templatemo-gold">Touch</span></h2>
+						<p class="margin-top-30">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio nisi elit consequat ipsum, nec sagittis sem nibh id elit. . </p>
+						<div>
+							<img src="assets/images/social-icons.png" alt="Social icons" class="templatemo-social-icons-img">
+							<a href="http://www.facebook.com"><div id="facebook" class="templatemo-social-icon"></div></a>
+							<a href="http://www.twitter.com"><div id="twitter" class="templatemo-social-icon"></div></a>
+							<a href="http://plus.google.com"><div id="google" class="templatemo-social-icon"></div></a>
+							<a href="http://www.vimeo.com"><div id="vimeo" class="templatemo-social-icon"></div></a>
+							<a href="http://www.flickr.com"><div id="flickr" class="templatemo-social-icon"></div></a>				
+						</div>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="container margin-top-30">
+		<div class="row">
+			<div class="col-lg-12">
+				<p class="templatemo-copyright-container text-uppercase small templatemo-brown">
+					<span class="templatemo-copyright-text">Copyright &copy; 2084 <a href="#" class="templatemo-gold">Company Name</a></span>
+					<!-- <span class="templatemo-copyright-design">Design: <a href="http://www.templatemo.com" class="templatemo-gold">templatemo</a></span> -->
+				</p>
+			</div>
+		</div>		
+	</footer>	
+	<script src="assets/js/jquery-1.11.1.min.js"></script>
+	<script src="assets/js/jquery.jcarousel.min.js"></script>
+	<script src="assets/js/templatemo_script.js"></script>
 </body>
-
 </html>
