--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -22,11 +22,10 @@
 <body>
 	<nav id="responsive-menu">
         <ul class="menu-holder">
-            <li class="active"><a href="#home"><i class="fa fa-home"></i>Home</a></li>
-            <li><a href="#about"><i class="fa fa-briefcase"></i>About</a></li>
-            <li><a href="#services"><i class="fa fa-cogs"></i>Services</a></li>
-            <li><a href="#products"><i class="fa fa-list"></i>Products</a></li>
-            <li><a href="#contact"><i class="fa fa-envelope"></i>Contact</a></li>
+            <li class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
+			<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
+			<li><a href="/my_subscriptz"><i></i>My Subscriptz</a></li>
         </ul>
     </nav>
     <div class="templatemo-site-header">
@@ -34,10 +33,11 @@
 			<div class="row templatemo-position-relative">				
 				<nav class="hidden-xs text-uppercase templatemo-nav">
 					<ul class="menu-holder">
-						<li class="active"><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>					
-						<li><a href="#contact">Contact</a></li>
+						<li class="active"><a href="/">Home</a></li>
 						<% if(logged){ %>
+							<li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
+							<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
+							<li class="active"><a href="/my_subscriptz"><i></i>My Subscriptz</a></li>
 							<li><a href="/logout">Logout 😨</a></li>
 						<% }else{ %>
 							<li><a href="/login">Log in 🤭</a></li>
