--- a/views/templates/my_subscriptz.ejs
+++ b/views/templates/my_subscriptz.ejs
@@ -25,7 +25,7 @@
             <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
             <li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
             <li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
-            <li class="active"><a href="/my_subscriptz"><i></i>My Subscriptz</a></li>
+            <li class="active"><a href="/my_subscriptz"><i class="fa fa-book"></i>My Subscriptz</a></li>
             <li><a href="/logout"><i class="fa fa-cogs"></i>Logout</a></li>
         </ul>
     </nav>
