--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -23,9 +23,16 @@
 	<nav id="responsive-menu">
         <ul class="menu-holder">
             <li class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
+			<% if(logged){ %>
             <li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
 			<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
-			<li><a href="/my_subscriptz"><i></i>My Subscriptz</a></li>
+			<li><a href="/my_subscriptz"><i class="fa fa-book"></i>My Subscriptz</a></li>
+			<li><a href="/logout"><i class="fa fa-book"></i>Logout</a></li>
+			<% }else{ %>
+				<li><a href="/login"><i class="fa fa-book"></i>Login</a></li>
+				<li><a href="/signup"><i class="fa fa-book"></i>Signup</a></li>
+			<% } %> 
+			
         </ul>
     </nav>
     <div class="templatemo-site-header">
@@ -35,10 +42,10 @@
 					<ul class="menu-holder">
 						<li class="active"><a href="/">Home</a></li>
 						<% if(logged){ %>
-							<li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
-							<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
-							<li class="active"><a href="/my_subscriptz"><i></i>My Subscriptz</a></li>
-							<li><a href="/logout">Logout 😨</a></li>
+							<li><a href="/explore">🔍Explore</a></li>
+							<li><a href="/add">➕Add</a></li>	
+							<li class="active"><a href="/my_subscriptz">📃My Subscriptz</a></li>				
+							<li><a href="/logout">Logout</a></li>
 						<% }else{ %>
 							<li><a href="/login">Log in 🤭</a></li>
 							<li><a href="/signup">Sign Up 😻</a></li>
