--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -29,11 +29,11 @@
             <li><a href="#contact"><i class="fa fa-envelope"></i>Contact</a></li>
         </ul>
     </nav>
-    <div class="templatemo-site-header">
-		<div class="container">
-			<div class="row templatemo-position-relative">				
+    <div class="templatemo-site-header" >
+		<div class="container" >
+			<div class="row templatemo-position-relative" >				
 				<nav class="hidden-xs text-uppercase templatemo-nav">
-					<ul class="menu-holder">
+					<ul class="menu-holder" style="background-color: black;">
 						<li class="active"><a href="#home">Home</a></li>
 						<li><a href="#about">About</a></li>					
 						<li><a href="#contact">Contact</a></li>
@@ -73,7 +73,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
-						<h2 class="templatemo-brown">Sub Swap Subscription</h2>
+						<h2 class="templatemo-brown">Subscriptz 🔴 </h2>
 						<h3 class="templatemo-gold">What do you do with extra coupons that you would not need? What if you could swap them with something that you would use?
 							Sounds cool? You are at the right place 😏</h3>
 						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a>
@@ -83,18 +83,41 @@
 			</div>
 		</div>
 	</section>
+	<br>
+	<br>
+	<br>
 	<section id="about" class="templatemo-section">
 		<div class="container">
 			<div class="row">
+				<h2 style="color: blanchedalmond; text-align: center;">Meet Our Amazing Team</h2>
+				<p style="text-align: center; color: cornsilk; font-size: 15px;">"Coming together is a beginning, staying together is progress, and working together is success."
+					- Henry Ford</p>
+				<br>
+				<br>
 				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-content-box text-right">
-						<h2 class="templatemo-brown">
-							<span class="templatemo-section-title">Meet Our</span>
-							<span class="templatemo-section-title">Creative <span class="templatemo-gold"><strong>Team</strong></span></span>
-						</h2>
-						<p class="margin-top-30">Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
-	Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
-						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Proin condimentum fermentum nunc. Suspendisse in orci enim.</p>
+					<div class="templatemo-flex-center templatemo-black-bg">
+						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
+							<div class="jcarousel-wrapper templatemo-team">
+								<div class="jcarousel">
+								    <ul>
+								        <li>
+								        	<div class="text-center templatemo-team-member-container">
+								        		<div class="templatemo-member-img-container">
+								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
+								        			<img src="assets/images/team-member-1.jpg" alt="Team Member 1" class="tm-team-member-img">
+								        		</div>								        		
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Aenean sollicitudin</h3>
+												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
+												<p class="margin-top-15">Ribendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+												<p class="templatemo-brown text-uppercase">Duised odio</p>
+											</div>
+								        </li>
+										
+								    </ul>
+								</div>
+								
+							</div>
+						</div>						
 					</div>										
 				</div>
 				<div class="col-lg-6 col-md-6">
@@ -115,34 +138,10 @@
 												<p class="templatemo-brown text-uppercase">Duised odio</p>
 											</div>
 								        </li>
-								        <li>
-								        	<div class="text-center templatemo-team-member-container">
-								        		<div class="templatemo-member-img-container">
-								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
-													<img src="assets/images/team-member-2.jpg" alt="Team Member 2" class="img-circle tm-team-member-img">
-												</div>
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Ribendum auctor</h3>
-												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15">
-												<p class="margin-top-15">Aenean sollicitudin, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-												<p class="templatemo-brown text-uppercase">Nisi elit</p>
-											</div>							        	
-								        </li>
-								        <li>
-								        	<div class="text-center templatemo-team-member-container">
-								        		<div class="templatemo-member-img-container">
-								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
-													<img src="assets/images/team-member-3.jpg" alt="Team Member 3" class="img-circle tm-team-member-img">
-												</div>
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">sagittis sem</h3>
-												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15">
-												<p class="margin-top-15">Ribendum auctornisi elit consequat ipsum, nisi elit sem nibh id elit.</p>
-												<p class="templatemo-brown text-uppercase">Nec sagittis</p>
-											</div>							        	
-								        </li>
+										
 								    </ul>
 								</div>
-								<a href="#" class="jcarousel-control-prev inactive">&lsaquo;</a>
-				                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+								
 							</div>
 						</div>						
 					</div>					
@@ -150,6 +149,9 @@
 			</div>
 		</div>
 	</section>
+	<br>
+	<br>
+	<br>
 	<section id="services" class="templatemo-section">
 		<div class="container">
 			<div class="row">
