--- a/views/templates/login.ejs
+++ b/views/templates/login.ejs
@@ -21,7 +21,7 @@
         <form action="/login" method="POST">
         
           <h1 style="margin-top: -5rem;">
-            🤠 Login 
+            💗 Login 
           </h1>
           <% if( error !="" ){ %>
             <div
@@ -54,8 +54,10 @@
           <input type="password" name="password" value="">
           <br><br>
           <input type="submit" value="SUBMIT" class="submit-btn">
-          <p style="color: blanchedalmond;">New here? <a href="/signup" style="color: chartreuse;">Register Now</a></p>
-
+          <p style="color: blanchedalmond;">New here? <a href="/signup" style="color: chartreuse; text-decoration: none;">Register Now</a></p>
+          <br><br>
+          <a  href="/" style="color: chartreuse; text-decoration: none;">🔙 Back to Home</a></p>
+          
         </form>
       </div>
     </div>
