--- a/views/templates/signup.ejs
+++ b/views/templates/signup.ejs
@@ -42,8 +42,10 @@
           <input type="password" name="confirmpassword" value="">
           <br><br>
           <input type="submit" value="SUBMIT" class="submit-btn">
-          <p style="color: blanchedalmond;">Already Registered? <a href="/login" style="color: chartreuse;">Login Here</a></p>
-
+          <p style="color: blanchedalmond;">Already Registered? <a href="/login" style="color: chartreuse; text-decoration: none;">Login Here</a></p>
+          <br>
+          <p style="color: blanchedalmond;"><a href="/" style="color: chartreuse; text-decoration: none;">🔙 Back to Home</a></p>
+                
         </form>
       </div>
     </div>
