--- a/assets/css/Signup.css
+++ b/assets/css/Signup.css
@@ -44,12 +44,11 @@ html {
   .flex-container {
     width: 100vw;
   
-    margin-top: 60px;
+    margin-top: 26px;
   
     display: flex;
     justify-content: center;
     align-items: center;
-    
     
 
   }
@@ -57,6 +56,7 @@ html {
   .content-container {
     width: 500px;
     height: 550px;
+    
   }
   
   .form-container {
@@ -65,10 +65,11 @@ html {
     align-items: center;
   
     width: 500px;
-    height: 580px;
+    height: 600px;
   
     margin-top: 5px;
     padding-top: 20px;
+
   
     border-radius: 12px;
   
@@ -113,11 +114,13 @@ html {
     width: 80px;
   
     transition: all 1s;
+    margin-bottom: 10px;
   }
   
   .submit-btn:hover {
     color: rgb(255, 255, 255);
   
     box-shadow: none;
+
   }
   
