--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -92,6 +92,7 @@
 	</section>
 	<br>
 	<br>
+	<hr class="style-four">
 	<br>
 	<section id="about" class="templatemo-section">
 		<div class="container">
@@ -110,13 +111,11 @@
 								        <li>
 								        	<div class="text-center templatemo-team-member-container">
 								        		<div class="templatemo-member-img-container">
-								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
-								        			<img src="assets/images/team-member-1.jpg" alt="Team Member 1" class="tm-team-member-img">
-								        		</div>								        		
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Aenean sollicitudin</h3>
+								        			</div>								        		
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Sanskriti Kushik 💎</h3>
 												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
-												<p class="margin-top-15">Ribendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-												<p class="templatemo-brown text-uppercase">Duised odio</p>
+												<p class="margin-top-15">A Full Stack Developer, Competitive Programming enthusiast who loves taking on challenges!</p>
+											
 											</div>
 								        </li>
 										
@@ -136,13 +135,11 @@
 								        <li>
 								        	<div class="text-center templatemo-team-member-container">
 								        		<div class="templatemo-member-img-container">
-								        			<img src="assets/images/team-img-frame.png" alt="Team img frame" class="templatemo-img-frame">
-								        			<img src="assets/images/team-member-1.jpg" alt="Team Member 1" class="tm-team-member-img">
-								        		</div>								        		
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Aenean sollicitudin</h3>
+								        			</div>								        		
+												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Irit Kushwaha ❣️</h3>
 												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
-												<p class="margin-top-15">Ribendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-												<p class="templatemo-brown text-uppercase">Duised odio</p>
+												<p class="margin-top-15">A Frontend Developer, Competitive Programmer, and a quick learner who can code in any situation!</p>
+												
 											</div>
 								        </li>
 										
@@ -158,100 +155,9 @@
 	</section>
 	<br>
 	<br>
+	<hr class="style-four">
 	<br>
-	<section id="services" class="templatemo-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-flex-center templatemo-black-bg text-center">
-						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
-							<div class="templatemo-flex-item-ie-fix padding-30">
-								<h2 class="templatemo-gold">Our Plans</h2>
-								<div class="templatemo-service-container margin-top-15">
-									<img src="assets/images/plan-1.png" alt="Plan 1" class="templatemo-service-image">
-									<div class="templatemo-service-content text-left">
-										<h3 class="templatemo-service-title templatemo-brown">duis sed odio sit amet</h3>
-										<p class="templatemo-service-description">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-									</div>						
-								</div>
-								<div class="templatemo-service-container">
-									<img src="assets/images/plan-2.png" alt="Plan 2" class="templatemo-service-image">
-									<div class="templatemo-service-content text-left">
-										<h3 class="templatemo-service-title templatemo-brown">sagittis sem nibhd</h3>
-										<p class="templatemo-service-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat.</p>	
-									</div>						
-								</div>
-								<div class="templatemo-service-container">
-									<img src="assets/images/plan-3.png" alt="Plan 3" class="templatemo-service-image">
-									<div class="templatemo-service-content text-left">
-										<h3 class="templatemo-service-title templatemo-brown">duis sed odio sit amet</h3>
-										<p class="templatemo-service-description">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>	
-									</div>						
-								</div>	
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-content-box templatemo-second-box">
-						<h2 class="templatemo-brown">
-							<span class="templatemo-section-title">Powerful</span>
-							<span class="templatemo-section-title">Creative <span class="templatemo-gold"><strong>Design</strong></span></span>
-						</h2>
-						<p class="margin-top-30">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudinl
-	dorem quis bibendum auctor, nisi elit consequat ipsum, nec sagit. tis</p>
-					</div>					
-				</div>
-			</div>
-		</div>
-	</section>
-	<section id="products" class="templatemo-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-content-box text-right">
-						<h2 class="templatemo-brown">
-							<span class="templatemo-section-title">The Best</span>
-							<span class="templatemo-section-title">Quality <span class="templatemo-gold"><strong>Products</strong></span></span>
-						</h2>
-						<p class="margin-top-30">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
-					</div>					
-				</div>
-				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-flex-center templatemo-black-bg">
-						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
-							<div class="jcarousel-wrapper templatemo-products">
-								<div class="jcarousel">
-								    <ul>
-								        <li>
-								        	<div class="templatemo-product-container text-center">
-												<h3 class="templatemo-gold">Product Name</h3>
-												<img src="assets/images/product-1.png" alt="Product 1" class="templatemo-product-img">	
-											</div>	
-								        </li>
-								        <li>
-								        	<div class="templatemo-product-container text-center">
-												<h3 class="templatemo-gold">Smart Phone</h3>
-												<img src="assets/images/product-2.png" alt="Product 2" class="templatemo-product-img">	
-											</div>								        	
-								        </li>
-								        <li>
-								        	<div class="templatemo-product-container text-center">
-												<h3 class="templatemo-gold">Cogs</h3>
-												<img src="assets/images/product-3.png" alt="Product 3" class="templatemo-product-img">	
-											</div>								        	
-								        </li>
-								    </ul>
-								</div>
-								<a href="#" class="jcarousel-control-prev inactive">&lsaquo;</a>
-				                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
-							</div>													
-						</div>						
-					</div>					
-				</div>
-			</div>
-		</div>
-	</section>
+	
 	<section id="contact" class="templatemo-section">
 		<div class="container">
 			<div class="row">
