--- a/views/templates/add.ejs
+++ b/views/templates/add.ejs
@@ -25,6 +25,7 @@
             <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
             <li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
             <li class="active"><a href="/add"><i class="fa fa-home"></i>Add</a></li>
+            <li ><a href="/my_subscriptz"><i class="fa fa-book"></i>My Subscriptz</a></li>
             <li><a href="/logout"><i class="fa fa-cogs"></i>Logout</a></li>
         </ul>
     </nav>
@@ -34,10 +35,10 @@
 				<nav class="hidden-xs text-uppercase templatemo-nav">
 					<ul class="menu-holder">
 						<li><a href="/">🏡Home</a></li>
-						<li><a href="/explore">🔍Explore</a></li>
-                        <li class="active"><a href="/add">➕Add</a></li>					
+						<li ><a href="/explore">🔍Explore</a></li>
+                        <li class="active"><a href="/add">➕Add</a></li>	
+                        <li><a href="/my_subscriptz">📃My Subscriptz</a></li>				
 						<li><a href="/logout">Logout</a></li>
-						
 					</ul>
 				</nav>
 				<h1 class="templatemo-site-name">
