--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -35,7 +35,7 @@
 			
         </ul>
     </nav>
-    <div class="templatemo-site-header" >
+	<div class="templatemo-site-header" style="background-color: black;">
 		<div class="container" >
 			<div class="row templatemo-position-relative" >				
 				<nav class="hidden-xs text-uppercase templatemo-nav">
