--- a/views/templates/add.ejs
+++ b/views/templates/add.ejs
@@ -93,7 +93,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<p class="templatemo-copyright-container text-uppercase small templatemo-brown">
-					<span class="templatemo-copyright-text">Copyright &copy; 2084 <a href="#" class="templatemo-gold">Company Name</a></span>
+					<span class="templatemo-copyright-text">Made with ❤️ by <a href="#" class="templatemo-gold">Koderz</a></span>
 					<!-- <span class="templatemo-copyright-design">Design: <a href="http://www.templatemo.com" class="templatemo-gold">templatemo</a></span> -->
 				</p>
 			</div>
