--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -103,7 +103,7 @@
 				<br>
 				<br>
 				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-flex-center templatemo-black-bg">
+					<div class="templatemo-flex-center templatemo-black-bg" style="height: 260px;">
 						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
 							<div class="jcarousel-wrapper templatemo-team">
 								<div class="jcarousel">
@@ -127,7 +127,7 @@
 					</div>										
 				</div>
 				<div class="col-lg-6 col-md-6">
-					<div class="templatemo-flex-center templatemo-black-bg">
+					<div class="templatemo-flex-center templatemo-black-bg" style="height: 260px;">
 						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
 							<div class="jcarousel-wrapper templatemo-team">
 								<div class="jcarousel">
@@ -185,7 +185,7 @@
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
 						<h2 class="templatemo-brown">Get In <span class="templatemo-gold">Touch</span></h2>
-						<p class="margin-top-30">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio nisi elit consequat ipsum, nec sagittis sem nibh id elit. . </p>
+						<p class="margin-top-30"></p>
 						<div>
 							<img src="assets/images/social-icons.png" alt="Social icons" class="templatemo-social-icons-img">
 							<a href="http://www.facebook.com"><div id="facebook" class="templatemo-social-icon"></div></a>
@@ -203,7 +203,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<p class="templatemo-copyright-container text-uppercase small templatemo-brown">
-					<span class="templatemo-copyright-text">Copyright &copy; 2084 <a href="#" class="templatemo-gold">Company Name</a></span>
+					<span class="templatemo-copyright-text">Made with ❤️ by <a href="#" class="templatemo-gold">Koderz</a></span>
 					<!-- <span class="templatemo-copyright-design">Design: <a href="http://www.templatemo.com" class="templatemo-gold">templatemo</a></span> -->
 				</p>
 			</div>
