--- a/views/templates/explore.ejs
+++ b/views/templates/explore.ejs
@@ -99,7 +99,7 @@
                         <% } %>
                     <% } %>
                 </div>
-	<section id="home" class="templatemo-section">
+	<section id="home" class="templatemo-section" style="margin-top: -14rem;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 templatemo-position-relative">
