--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -191,7 +191,8 @@
 						<h2 class="templatemo-brown">Get In <span class="templatemo-gold">Touch</span></h2>
 						<p style="text-align: center; color: cornsilk; font-size: 15px;">“Alone we can do so little. Together we can do so much.”
 							– Helen Keller</p>
-						<p class="margin-top-30"></p>
+							<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/4dElYXDxXpFlktvz47" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/Proost-band-cheers-proost-proostband-4dElYXDxXpFlktvz47">via GIPHY</a></p>
+						
 
 						<div>
 										
