--- a/views/templates/my_subscriptz.ejs
+++ b/views/templates/my_subscriptz.ejs
@@ -43,7 +43,7 @@
 					</ul>
 				</nav>
 				<h1 class="templatemo-site-name">
-                	<span class="templatemo-brown" style="align-items: center">Get Started 🤩</span> 
+                	<span class="templatemo-brown" style="align-items: center">Subscriptz 🎇</span> 
                 	<span class="templatemo-gold"></span>
                 </h1>
 				<div class="text-right visible-xs">
