--- a/views/templates/explore.ejs
+++ b/views/templates/explore.ejs
@@ -42,7 +42,7 @@
 					</ul>
 				</nav>
 				<h1 class="templatemo-site-name">
-                	<span class="templatemo-brown" style="align-items: center">Get Started 🤩</span> 
+                	<span class="templatemo-brown" style="align-items: center">Subscriptz 🎇</span> 
                 	<span class="templatemo-gold"></span>
                 </h1>
 				<div class="text-right visible-xs">
@@ -78,7 +78,7 @@
                 <div style="color: whitesmoke;">
                     <% if(!verified){ %>
                         <div class="text-center" role="alert">
-                          <strong>ATTENTION !</strong> Please verify your account to continue using our services.
+                          <strong>ATTENTION ❗</strong> Please verify your account to continue using our services.
                           <a href="/user/send-verification-email">Re-send Verification Email</a>
                           <button style="color: white;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
