--- a/views/templates/explore.ejs
+++ b/views/templates/explore.ejs
@@ -29,7 +29,7 @@
             <li><a href="/logout"><i class="fa fa-cogs"></i>Logout</a></li>
         </ul>
     </nav>
-    <div class="templatemo-site-header" style="background-color: black;">
+    <div class="templatemo-site-header" >
 		<div class="container">
 			<div class="row templatemo-position-relative">				
 				<nav class="hidden-xs text-uppercase templatemo-nav">
@@ -126,8 +126,12 @@
 		</div>
 	</section>
   
+    
+    <h2 style="color: blanchedalmond; text-align: center;">Meet Our Amazing Team</h2>
+    <p style="text-align: center; color: cornsilk; font-size: 15px;">"Coming together is a beginning, staying together is progress, and working together is success."
+        - Henry Ford</p>
 	
-    <section id="about" class="templatemo-section">
+    <section class="templatemo-section" style="margin-top: 30px;">
 		<div class="container">
 			<div class="row">
                 <% if (data != null) { %>
@@ -176,6 +180,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            
+                                           
                             </section>
 
                         </div>
