--- a/views/templates/explore.ejs
+++ b/views/templates/explore.ejs
@@ -126,11 +126,11 @@
 		</div>
 	</section>
   
+    <br>
+    <hr class="style-two " >
+    <br>
+    <h3 style="color: blanchedalmond; text-align: center;">Check Out the Subscriptions ❗❗❗</h3>
     
-    <h2 style="color: blanchedalmond; text-align: center;">Meet Our Amazing Team</h2>
-    <p style="text-align: center; color: cornsilk; font-size: 15px;">"Coming together is a beginning, staying together is progress, and working together is success."
-        - Henry Ford</p>
-	
     <section class="templatemo-section" style="margin-top: 30px;">
 		<div class="container">
 			<div class="row">
@@ -174,7 +174,7 @@
                                                             </div>	
                                                             <form method="post" action="/claim">
                                                                 <input type="hidden" name="id" value="<%= subs.id %>">
-                                                                <button>Claim</button>
+                                                                <button style="background-color: cornflowerblue; border: black; border-radius: 1ch; height: 35px; width: 75px; color: black; " >Claim 🟥</button>
                                                             </form>
                                                         </div>
                                                     </div>
