--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -136,6 +136,12 @@ ul { margin: 0; }
 
 /* 2. Header & Menu Styles
 --------------------------------------*/
+hr.style-two {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 254, 254, 0.75), rgba(0, 0, 0, 0));
+}
+
 .templatemo-site-header {
   background-color:#000 ;
   border-bottom: 1px solid #ffffff;
