--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -62,7 +62,7 @@
 			</div>
 		</div>    	
     </div>
-	<section id="home" class="templatemo-section">
+	<section id="home" class="templatemo-section" style="margin-top: -6rem;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 templatemo-position-relative">
@@ -81,8 +81,8 @@
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
 						<h2 class="templatemo-brown">Subscriptz 🔴 </h2>
-						<h3 class="templatemo-gold">What do you do with extra coupons that you would not need? What if you could swap them with something that you would use?
-							Sounds cool? You are at the right place 😏</h3>
+						<h3 class="templatemo-gold">All of us have some unused subscriptions collected from various events and hackathons. Why don't we share some?
+							<br/>Or you can collect 'em too!!!😉</h3>
 						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a>
 						<a href="/signup" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(12, 95, 143);">Sign Up 😨</a>
 					</div>					
