--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -15,6 +15,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<link rel = "icon" href = "assets/images/logo.PNG" type = "image/x-icon">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/templatemo_style.css" rel="stylesheet" type="text/css">
