updated whole website

--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
 <head>
-	<!-- 
-    	Brownie Template
-    	http://www.templatemo.com/preview/templatemo_440_brownie
-
-    	Credits:
-    	http://sorgalla.com/jcarousel/
-    	http://unsplash.com
-    	http://absurdwordpreferred.deviantart.com/art/FREE-Cogs-Transparent-PNG-145452644
-    -->
 	<title>Subscriptz</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
@@ -81,10 +72,10 @@
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
-						<h2 class="templatemo-brown">Subscriptz 🔴 </h2>
+						<h2 class="templatemo-brown">Subscriptz 🔴 </h2><br>
 						<h3 class="templatemo-gold">All of us have some unused subscriptions collected from various events and hackathons. Why don't we share some?
 							<br/>Or you can collect 'em too!!!😉</h3>
-						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a>
+						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a> 
 						<a href="/signup" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(12, 95, 143);">Sign Up 😨</a>
 					</div>					
 				</div>
