--- a/views/templates/my_subscriptz.ejs
+++ b/views/templates/my_subscriptz.ejs
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <head>
-	<!-- 
-    	Brownie Template
-    	http://www.templatemo.com/preview/templatemo_440_brownie
 
-    	Credits:
-    	http://sorgalla.com/jcarousel/
-    	http://unsplash.com
-    	http://absurdwordpreferred.deviantart.com/art/FREE-Cogs-Transparent-PNG-145452644
-    -->
 	<title>Subscriptz</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<link rel = "icon" href = "assets/images/logo.PNG" type = "image/x-icon">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/Addcoupon.css" rel="stylesheet" type="text/css">
