--- a/assets/css/Addcoupon.css
+++ b/assets/css/Addcoupon.css
@@ -1,4 +1,26 @@
+::-webkit-scrollbar {
+  width: 8px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey; */
+  border-radius: 10px;
+  background-color: rgb(0, 0, 0);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3eada6;
+}
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css');
@@ -81,6 +103,10 @@ input[type="url"] {
     background: rgba(82, 80, 80, 0.205);
   }
 
+  ::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+  
   input[type="date"] {
     display: block;
     width: 450px;
