--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -1,6 +1,30 @@
+::-webkit-scrollbar {
+  width: 8px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey; */
+  border-radius: 10px;
+  background-color: rgb(0, 0, 0);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3eada6;
+}
 * { font-family: 'Open Sans', sans-serif; }
 body { background-color: #000; }
+
+
 h1, h2, h3 { text-transform: uppercase; }
 h2 {
   margin-top: 0;
