--- a/views/templates/index.ejs
+++ b/views/templates/index.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
 	<title>Subscriptz</title>
 	<meta name="keywords" content="" />
@@ -6,78 +7,84 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-	<link rel = "icon" href = "assets/images/logo.PNG" type = "image/x-icon">
+	<link rel="icon" href="assets/images/logo.PNG" type="image/x-icon">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/templatemo_style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 	<nav id="responsive-menu">
-        <ul class="menu-holder">
-            <li class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
+		<ul class="menu-holder">
+			<li class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
 			<% if(logged){ %>
-            <li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
-			<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
-			<li><a href="/my_subscriptz"><i class="fa fa-book"></i>My Subscriptz</a></li>
-			<li><a href="/logout"><i class="fa fa-book"></i>Logout</a></li>
-			<% }else{ %>
-				<li><a href="/login"><i class="fa fa-book"></i>Login</a></li>
-				<li><a href="/signup"><i class="fa fa-book"></i>Signup</a></li>
-			<% } %> 
-			
-        </ul>
-    </nav>
+				<li><a href="/explore"><i class="fa fa-briefcase"></i>Explore</a></li>
+				<li><a href="/add"><i class="fa fa-home"></i>Add</a></li>
+				<li><a href="/my_subscriptz"><i class="fa fa-book"></i>My Subscriptz</a></li>
+				<li><a href="/logout"><i class="fa fa-book"></i>Logout</a></li>
+				<% }else{ %>
+					<li><a href="/login"><i class="fa fa-book"></i>Login</a></li>
+					<li><a href="/signup"><i class="fa fa-book"></i>Signup</a></li>
+					<% } %>
+
+		</ul>
+	</nav>
 	<div class="templatemo-site-header" style="background-color: black;">
-		<div class="container" >
-			<div class="row templatemo-position-relative" >				
+		<div class="container">
+			<div class="row templatemo-position-relative">
 				<nav class="hidden-xs text-uppercase templatemo-nav">
 					<ul class="menu-holder">
 						<li class="active"><a href="/">🏡Home</a></li>
 						<% if(logged){ %>
 							<li><a href="/explore">🔍Explore</a></li>
-							<li><a href="/add">➕Add</a></li>	
-							<li><a href="/my_subscriptz">📃My Subscriptz</a></li>				
+							<li><a href="/add">➕Add</a></li>
+							<li><a href="/my_subscriptz">📃My Subscriptz</a></li>
 							<li><a href="/logout">Logout</a></li>
-						<% }else{ %>
-							<li><a href="/login">Log in 🤭</a></li>
-							<li><a href="/signup">Sign Up 😻</a></li>
-						<% } %> 
+							<% }else{ %>
+								<li><a href="/login">Log in 🤭</a></li>
+								<li><a href="/signup">Sign Up 😻</a></li>
+								<% } %>
 					</ul>
 				</nav>
 				<h1 class="templatemo-site-name">
-                	<span class="templatemo-brown" style="align-items: center">Subscriptz 🎇</span> 
-                	<span class="templatemo-gold"></span>
-                </h1>
+					<span class="templatemo-brown" style="align-items: center">Subscriptz 🎇</span>
+					<span class="templatemo-gold"></span>
+				</h1>
 				<div class="text-right visible-xs">
-		            <a href="#" id="mobile_menu"><span class="fa fa-bars"></span></a>
-		        </div>
+					<a href="#" id="mobile_menu"><span class="fa fa-bars"></span></a>
+				</div>
 			</div>
-		</div>    	
-    </div>
+		</div>
+	</div>
 	<section id="home" class="templatemo-section" style="margin-top: -6rem;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 templatemo-position-relative">
 					<div class="templatemo-flex-center templatemo-black-bg text-center">
 						<div class="templatemo-home-image-container">
-							<iframe src="https://giphy.com/embed/3tGUuD8MulTchzceb8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-							
-							<div class="templatemo-image-overlay">							
-								
+							<iframe src="https://giphy.com/embed/3tGUuD8MulTchzceb8" width="480" height="270"
+								frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+
+							<div class="templatemo-image-overlay">
+
 								<p class="text-uppercase templatemo-gold">Subscriptz</p>
-																				
+
 							</div>
 						</div>
-					</div>										
+					</div>
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
 						<h2 class="templatemo-brown">Subscriptz 🔴 </h2><br>
-						<h3 class="templatemo-gold">All of us have some unused subscriptions collected from various events and hackathons. Why don't we share some?
-							<br/>Or you can collect 'em too!!!😉</h3>
-						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Log in 🤭</a> 
-						<a href="/signup" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(12, 95, 143);">Sign Up 😨</a>
-					</div>					
+						<h3 class="templatemo-gold">All of us have some unused subscriptions collected from various
+							events and hackathons. Why don't we share some?
+							<br />Or you can collect 'em too!!!😉
+						</h3>
+						<a href="/login" class="btn text-uppercase templatemo-btn templatemo-info-btn"
+							style="background-color: rgb(201, 84, 38);">Log in 🤭</a>
+						<a href="/signup" class="btn text-uppercase templatemo-btn templatemo-info-btn"
+							style="background-color: rgb(12, 95, 143);">Sign Up 😨</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -90,7 +97,8 @@
 		<div class="container">
 			<div class="row">
 				<h2 style="color: blanchedalmond; text-align: center;">Meet Our Amazing Team</h2>
-				<p style="text-align: center; color: cornsilk; font-size: 15px;">"Coming together is a beginning, staying together is progress, and working together is success."
+				<p style="text-align: center; color: cornsilk; font-size: 15px;">"Coming together is a beginning,
+					staying together is progress, and working together is success."
 					- Henry Ford</p>
 				<br>
 				<br>
@@ -99,48 +107,56 @@
 						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
 							<div class="jcarousel-wrapper templatemo-team">
 								<div class="jcarousel">
-								    <ul>
-								        <li>
-								        	<div class="text-center templatemo-team-member-container">
-								        		<div class="templatemo-member-img-container">
-								        			</div>								        		
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Sanskriti Kushik 💎</h3>
-												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
-												<p class="margin-top-15">A Full Stack Developer, Competitive Programming enthusiast who loves taking on challenges!</p>
-											
+									<ul>
+										<li>
+											<div class="text-center templatemo-team-member-container">
+												<div class="templatemo-member-img-container">
+												</div>
+												<h3
+													class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">
+													Sanskriti Kushik 💎</h3>
+												<img src="assets/images/underline.png" alt="Underline"
+													class="margin-top-15 img-responsive center-block">
+												<p class="margin-top-15">A Full Stack Developer, Competitive Programming
+													enthusiast who loves taking on challenges!</p>
+
 											</div>
-								        </li>
-										
-								    </ul>
+										</li>
+
+									</ul>
 								</div>
-								
+
 							</div>
-						</div>						
-					</div>										
+						</div>
+					</div>
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-flex-center templatemo-black-bg" style="height: 260px;">
 						<div class="templatemo-flex-center templatemo-brown-rectangle-bg">
 							<div class="jcarousel-wrapper templatemo-team">
 								<div class="jcarousel">
-								    <ul>
-								        <li>
-								        	<div class="text-center templatemo-team-member-container">
-								        		<div class="templatemo-member-img-container">
-								        			</div>								        		
-												<h3 class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">Irit Kushwaha ❣️</h3>
-												<img src="assets/images/underline.png" alt="Underline" class="margin-top-15 img-responsive center-block">
-												<p class="margin-top-15">A Frontend Developer, Competitive Programmer, and a quick learner who can code in any situation!</p>
-												
+									<ul>
+										<li>
+											<div class="text-center templatemo-team-member-container">
+												<div class="templatemo-member-img-container">
+												</div>
+												<h3
+													class="tm-team-member-title templatemo-gold text-uppercase margin-top-15">
+													Irit Kushwaha ❣️</h3>
+												<img src="assets/images/underline.png" alt="Underline"
+													class="margin-top-15 img-responsive center-block">
+												<p class="margin-top-15">A Frontend Developer, Competitive Programmer,
+													and a quick learner who can code in any situation!</p>
+
 											</div>
-								        </li>
-										
-								    </ul>
+										</li>
+
+									</ul>
 								</div>
-								
+
 							</div>
-						</div>						
-					</div>					
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -149,51 +165,57 @@
 	<br>
 	<hr class="style-four">
 	<br>
-	
+
 	<section id="contact" class="templatemo-section">
 		<div class="container">
 			<div class="row">
-				
-				
+
+
 				<br>
 				<br>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-flex-center templatemo-black-bg">
 						<form action="/contact" method="post">
 							<div class="tm-contact-form">
-				                <div class="form-group">
-				                    <input type="text" id="contact_name" name="name" class="form-control" placeholder="Name..." />
-				                </div>
-				                <div class="form-group">
-				                    <input type="email" id="contact_email" name="email" class="form-control" placeholder="Email..." />
-				                </div>
-				                <div class="form-group">
-				                    <input type="text" id="contact_subject" name="sub" class="form-control" placeholder="Subject..." />
-				                </div>
-				                <div class="form-group">
-				                    <textarea id="contact_message" name="msg" class="form-control" rows="8" placeholder="Message..."></textarea>
-				                </div>
-			                </div>
-			                <button type="submit" class="btn text-uppercase templatemo-btn templatemo-send-btn">Send</button>
-			            </form>	
+								<div class="form-group">
+									<input type="text" id="contact_name" name="name" class="form-control"
+										placeholder="Name..." />
+								</div>
+								<div class="form-group">
+									<input type="email" id="contact_email" name="email" class="form-control"
+										placeholder="Email..." />
+								</div>
+								<div class="form-group">
+									<input type="text" id="contact_subject" name="sub" class="form-control"
+										placeholder="Subject..." />
+								</div>
+								<div class="form-group">
+									<textarea id="contact_message" name="msg" class="form-control" rows="8"
+										placeholder="Message..."></textarea>
+								</div>
+							</div>
+							<button type="submit"
+								class="btn text-uppercase templatemo-btn templatemo-send-btn">Send</button>
+						</form>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
 						<h2 class="templatemo-brown">Get In <span class="templatemo-gold">Touch</span></h2>
-						<p style="text-align: center; color: cornsilk; font-size: 15px;">“Alone we can do so little. Together we can do so much.”
+						<p style="text-align: center; color: cornsilk; font-size: 15px;">“Alone we can do so little.
+							Together we can do so much.”
 							– Helen Keller</p>
-							<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/4dElYXDxXpFlktvz47" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-							<div class="templatemo-image-overlay">							
-								
-								<p class="text-uppercase templatemo-gold">Subscriptz</p>
-																				
-							</div>
+						<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe
+								src="https://giphy.com/embed/4dElYXDxXpFlktvz47" width="100%" height="100%"
+								style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+						</div>
+
+
 
 						<div>
-										
+
 						</div>
-					</div>					
+					</div>
 				</div>
 			</div>
 		</div>
@@ -202,14 +224,16 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<p class="templatemo-copyright-container text-uppercase small templatemo-brown">
-					<span class="templatemo-copyright-text">Made with ❤️ by <a href="#" class="templatemo-gold">Koderz</a></span>
+					<span class="templatemo-copyright-text">Made with ❤️ by <a href="#"
+							class="templatemo-gold">Koderz</a></span>
 					<!-- <span class="templatemo-copyright-design">Design: <a href="http://www.templatemo.com" class="templatemo-gold">templatemo</a></span> -->
 				</p>
 			</div>
-		</div>		
-	</footer>	
+		</div>
+	</footer>
 	<script src="assets/js/jquery-1.11.1.min.js"></script>
 	<script src="assets/js/jquery.jcarousel.min.js"></script>
 	<script src="assets/js/templatemo_script.js"></script>
 </body>
+
 </html>
