--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -563,3 +563,14 @@ have a fixed width and height (but it's not required).
     width: 75%;
   }
 }
+input[type="date"]::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: 2px;
+  opacity: 0.6;
+  filter: invert(0.8);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  opacity: 1
+}
