--- a/views/templates/explore.ejs
+++ b/views/templates/explore.ejs
@@ -12,7 +12,7 @@
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/explore.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body style="overflow-x: hidden;">
 	<nav id="responsive-menu">
         <ul class="menu-holder">
             <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
@@ -44,32 +44,8 @@
 			</div>
 		</div>    	
     </div>
-    
-                
-                <div style="color: whitesmoke;">
-                    <% if(!verified){ %>
-                        <div class="text-center" role="alert">
-                          <strong>ATTENTION ❗</strong> Please verify your account to continue using our services.
-                          <a href="/user/send-verification-email">Re-send Verification Email</a>
-                          <button style="color: white;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    <% } %>
-                    <% if(typeof emailsent !='undefined' ){ %>
-                        <% if(emailsent){ %>
-                            <div class="text-center" role="alert">
-                              <strong>SUCCESS !</strong> Verification Email Sent Sucessfully. Valid Only for 20 minutes.
-                            </div>
-                        <% } %>
-                    <% } %>
-                    <% if(typeof err !='undefined' ){ %>
-                        <% if(err){ %>
-                            <div class="text-center" role="alert">
-                            <strong>ERROR !</strong>
-                            <%= err %>
-                            </div>
-                        <% } %>
-                    <% } %>
-                </div>
+    <br><br>
+        
 	<section id="home" class="templatemo-section" style="margin-top: -14rem;">
 		<div class="container">
 			<div class="row">
@@ -87,7 +63,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="templatemo-content-box templatemo-second-box">
-						<h2 class="templatemo-brown">🤗 Available Subscription Coupons</h2>
+						<h2 class="templatemo-brown">🤗 Available Subscriptions</h2><br>
 						<h3 class="templatemo-gold">"Only Available For Limited Time ⌚.. Hurry Up Guyss!!! 🏃"</h3>
                         <a href="/add" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Add Coupons🤭</a>
 						
@@ -101,11 +77,10 @@
     <hr class="style-two " >
     <br>
     <h3 style="color: blanchedalmond; text-align: center;">Check Out the Subscriptions ❗❗❗</h3>
-    
     <section class="templatemo-section" style="margin-top: 30px;">
 		<div class="container">
 			<div class="row">
-                <% if (data != null) { %>
+                <% if (data != null) { %> 
                     <% for( var subs of data ) { %>
                         <div class="col-lg-6 col-md-6">
                             <section>
@@ -159,7 +134,9 @@
                         </div>
                     <% } %>
                 <% } else { %>
+                    <div class="row" style="background-color: white">
                     <h2>No Subscriptions left unclaimed! 😞</h2>
+                </div>
                 <% } %>
 	</section>
     
